--- a/theme.css
+++ b/theme.css
@@ -388,10 +388,6 @@ settings:
         level: 2
         collapsed: true
     - 
-        id: anp-decoration-toggle
-        title: Enable decoration recolors
-        type: class-toggle
-    - 
         id: anp-button-metadata-toggle
         title: Enable custom metadata button
         type: class-toggle
@@ -571,6 +567,114 @@ settings:
         type: variable-number
         default: 40
         format: px
+    - 
+        id: anp-decor-header
+        title: Text decorations
+        type: heading
+        level: 2
+        collapsed: true
+    - 
+        id: anp-decoration-toggle
+        title: Enable decoration recolors
+        type: class-toggle
+    - 
+        id: anp-italic-custom
+        title: Italic color
+        type: class-select
+        allowEmpty: true
+        default: anp-italic-green
+        options:
+            - 
+                label: Rosewater
+                value: anp-italic-rosewater
+            - 
+                label: Flamingo
+                value: anp-italic-flamingo
+            - 
+                label: Pink
+                value: anp-italic-pink
+            - 
+                label: Mauve
+                value: anp-italic-mauve
+            - 
+                label: Red
+                value: anp-italic-red
+            - 
+                label: Maroon
+                value: anp-italic-maroon
+            - 
+                label: Peach
+                value: anp-italic-peach
+            - 
+                label: Yellow
+                value: anp-italic-yellow
+            - 
+                label: Green
+                value: anp-italic-green
+            - 
+                label: Teal
+                value: anp-italic-teal
+            - 
+                label: Sky
+                value: anp-italic-sky
+            - 
+                label: Sapphire
+                value: anp-italic-sapphire
+            - 
+                label: Blue
+                value: anp-italic-blue
+            - 
+                label: Lavender
+                value: anp-italic-lavender
+    - 
+        id: anp-bold-custom
+        title: Bold color
+        type: class-select
+        allowEmpty: true
+        default: anp-bold-red
+        options:
+            - 
+                label: Rosewater
+                value: anp-bold-rosewater
+            - 
+                label: Flamingo
+                value: anp-bold-flamingo
+            - 
+                label: Pink
+                value: anp-bold-pink
+            - 
+                label: Mauve
+                value: anp-bold-mauve
+            - 
+                label: Red
+                value: anp-bold-red
+            - 
+                label: Maroon
+                value: anp-bold-maroon
+            - 
+                label: Peach
+                value: anp-bold-peach
+            - 
+                label: Yellow
+                value: anp-bold-yellow
+            - 
+                label: Green
+                value: anp-bold-green
+            - 
+                label: Teal
+                value: anp-bold-teal
+            - 
+                label: Sky
+                value: anp-bold-sky
+            - 
+                label: Sapphire
+                value: anp-bold-sapphire
+            - 
+                label: Blue
+                value: anp-bold-blue
+            - 
+                label: Lavender
+                value: anp-bold-lavender
     - 
         id: anp-translucency-header
         title: Translucency
@@ -820,6 +924,119 @@ settings:
   --ctp-accent: var(--ctp-lavender);
 }
 
+/*------------------------Bold/Italic Colors------------------------*/
+.anp-bold-rosewater {
+  --anp-bold-color: var(--ctp-rosewater);
+}
+
+.anp-bold-flamingo {
+  --anp-bold-color: var(--ctp-flamingo);
+}
+
+.anp-bold-pink {
+  --anp-bold-color: var(--ctp-pink);
+}
+
+.anp-bold-mauve {
+  --anp-bold-color: var(--ctp-mauve);
+}
+
+.anp-bold-red {
+  --anp-bold-color: var(--ctp-red);
+}
+
+.anp-bold-maroon {
+  --anp-bold-color: var(--ctp-maroon);
+}
+
+.anp-bold-peach {
+  --anp-bold-color: var(--ctp-peach);
+}
+
+.anp-bold-yellow {
+  --anp-bold-color: var(--ctp-yellow);
+}
+
+.anp-bold-green {
+  --anp-bold-color: var(--ctp-green);
+}
+
+.anp-bold-teal {
+  --anp-bold-color: var(--ctp-teal);
+}
+
+.anp-bold-sky {
+  --anp-bold-color: var(--ctp-sky);
+}
+
+.anp-bold-sapphire {
+  --anp-bold-color: var(--ctp-sapphire);
+}
+
+.anp-bold-blue {
+  --anp-bold-color: var(--ctp-blue);
+}
+
+.anp-bold-lavender {
+  --anp-bold-color: var(--ctp-lavender);
+}
+
+.anp-italic-rosewater {
+  --anp-italic-color: var(--ctp-rosewater);
+}
+
+.anp-italic-flamingo {
+  --anp-italic-color: var(--ctp-flamingo);
+}
+
+.anp-italic-pink {
+  --anp-italic-color: var(--ctp-pink);
+}
+
+.anp-italic-mauve {
+  --anp-italic-color: var(--ctp-mauve);
+}
+
+.anp-italic-red {
+  --anp-italic-color: var(--ctp-red);
+}
+
+.anp-italic-maroon {
+  --anp-italic-color: var(--ctp-maroon);
+}
+
+.anp-italic-peach {
+  --anp-italic-color: var(--ctp-peach);
+}
+
+.anp-italic-yellow {
+  --anp-italic-color: var(--ctp-yellow);
+}
+
+.anp-italic-green {
+  --anp-italic-color: var(--ctp-green);
+}
+
+.anp-italic-teal {
+  --anp-italic-color: var(--ctp-teal);
+}
+
+.anp-italic-sky {
+  --anp-italic-color: var(--ctp-sky);
+}
+
+.anp-italic-sapphire {
+  --anp-italic-color: var(--ctp-sapphire);
+}
+
+.anp-italic-blue {
+  --anp-italic-color: var(--ctp-blue);
+}
+
+.anp-italic-lavender {
+  --anp-italic-color: var(--ctp-lavender);
+}
+
 /*------------------Actual Configs--------------------*/
 .anuppuccin-accent-toggle {
   --color-accent: rgb(var(--ctp-accent));
@@ -1026,6 +1243,14 @@ body {
   display: none;
 }
 
+/*-Tab icons-*/
+.mod-left-split .workspace-tab-header.has-active-menu,
+.mod-right-split .workspace-tab-header.has-active-menu,
+.mod-left-split .workspace-tab-header.is-active,
+.mod-right-split .workspace-tab-header.is-active {
+  background-color: var(--background-modifier-active-hover);
+}
+
 body.anp-card-layout,
 .anp-card-layout .sidebar-toggle-button,
 .anp-card-layout .workspace-tabs.mod-top {
@@ -1174,6 +1399,10 @@ body {
   --tab-stacked-header-width: var(--anp-stacked-header-width, 40px);
 }
 
+.anp-card-layout .workspace .mod-root .workspace-tabs.mod-stacked .workspace-tab-container .workspace-leaf {
+  background-color: var(--background-primary);
+}
+
 body.is-translucent {
   background-color: transparent;
   --workspace-background-translucent: rgba(var(--ctp-crust), var(--anp-translucency-opacity));
@@ -1219,8 +1448,8 @@ body.is-translucent {
 
 /*-Decorations for bold and italics-*/
 .anp-decoration-toggle {
-  --italic-color: rgb(var(--ctp-green));
-  --bold-color: rgb(var(--ctp-red));
+  --italic-color: rgb(var(--anp-italic-color, var(--ctp-green)));
+  --bold-color: rgb(var(--anp-bold-color, var(--ctp-red)));
 }
 
 /*-Make it so that mark overwrites italic and bold colors-*/
@@ -1540,7 +1769,7 @@ hr {
   border-color: rgba(var(--callout-color), 0.4);
   border-width: 1px;
   border-radius: 10px;
-  background-color: rgb(var(--ctp-mantle));
+  background-color: rgba(var(--ctp-mantle), 0.4);
 }
 .anp-callout-toggle.anp-callout-sleek.anp-callout-normal-toggle .callout-content {
   padding: 10px 10px 10px 15px;
@@ -1550,7 +1779,7 @@ hr {
   border-color: rgba(var(--callout-color), 0.4);
   border-width: 1px;
   border-radius: 10px;
-  background-color: rgb(var(--ctp-mantle));
+  background-color: rgba(var(--ctp-mantle), 0.4);
 }
 .anp-callout-toggle.anp-callout-sleek .callout.is-collapsible.is-collapsed {
   padding: 0;
@@ -1559,6 +1788,9 @@ hr {
   background-color: rgba(var(--callout-color), 0.1);
   padding: 10px;
   cursor: pointer;
+}
+.anp-callout-toggle.anp-callout-sleek .callout.is-collapsible.is-collapsed .callout-content {
+  display: none;
 }
 .anp-callout-toggle.anp-callout-sleek .callout.is-collapsible:not(.is-collapsed) {
   padding: 0px 0px 10px 0px;
@@ -1603,7 +1835,7 @@ hr {
   border-left-width: 4px;
 }
 .anp-callout-toggle.anp-callout-willemstad .callout .callout-content {
-  background-color: rgba(var(--ctp-mantle));
+  background-color: rgba(var(--ctp-mantle), 0.4);
 }
 .anp-callout-toggle.anp-callout-willemstad .callout .callout-title {
   background-color: rgba(var(--callout-color), 0.1);
@@ -1893,6 +2125,14 @@ hr {
 
 .anp-simple-rainbow-color-toggle.anp-simple-rainbow-icon-folder-toggle .obsidian-icon-folder-icon {
   color: rgb(var(--rainbow-folder-color));
+}
+
+.obsidian-icon-folder-modal.prompt-results .suggestion-item {
+  color: var(--text-normal);
+}
+
+.prompt .obsidian-icon-folder-subheadline {
+  color: var(--text-muted);
 }
 
 .workspace-leaf-content[data-type=advanced-tables-toolbar] .nav-buttons-container {
