--- a/src/modules/Core/default-variables.scss
+++ b/src/modules/Core/default-variables.scss
@@ -151,6 +151,7 @@
     --drag-ghost-text-color: rgb(var(--ctp-crust));
     --nav-indentation-guide-color: rgba(var(--ctp-crust), 0.4);
     --titlebar-text-color-focused: var(--color-accent);
+    --callout-title-padding: var(--size-4-2);
 }
 .theme-dark {
       color-scheme: dark;
