--- a/src/modules/Callouts/main.scss
+++ b/src/modules/Callouts/main.scss
@@ -4,11 +4,11 @@
     .callout:not(.is-collapsible) {
       padding: 0px;
       .callout-content {
-        padding: 0 10px 10px 10px;
+        padding: 0 var(--callout-title-padding) var(--callout-title-padding) var(--callout-title-padding);
       }
       .callout-title {
         background-color: rgba(var(--callout-color), 0.0.5);
-        padding: 10px;
+        padding: var(--callout-title-padding);
         cursor: pointer;
         .callout-title-inner {
           font-weight: normal;
@@ -20,25 +20,38 @@
     .callout:not(.is-collapsible) {
       border-color: rgba(var(--callout-color), 0.4);
       border-width: 1px;
-      border-radius: 10px;
+      border-radius: var(--callout-radius);
       background-color: rgba(var(--ctp-mantle), 0.4);
     }
     .callout-content {
-      padding: 10px 10px 10px 15px;
+      padding: var(--callout-title-padding) var(--callout-title-padding) var(--callout-title-padding) calc(var(--callout-title-padding)*1.5);
       border-top: 1px dashed rgba(var(--callout-color), 0.4);
+    }
+    .callout-fold {
+      padding-right: 0px;
+    }
+    .callout-title-inner {
+      flex-grow: 1;
     }
   }
   .callout {
     &.is-collapsible {
+      .callout-fold {
+        padding-right: 0px;
+      }
+      .callout-title-inner {
+        flex-grow: 1;
+      }
       border-color: rgba(var(--callout-color), 0.4);
       border-width: 1px;
-      border-radius: 10px;
+      border-radius: var(--callout-radius);
       background-color: rgba(var(--ctp-mantle), 0.4);
+      --bold-weight: bolder;
       &.is-collapsed {
         padding: 0;
         .callout-title {
           background-color: rgba(var(--callout-color), 0.1);
-          padding: 10px;
+          padding: var(--callout-title-padding);
           cursor: pointer;
         }
         .callout-content {
@@ -46,15 +59,15 @@
         }
       }
       &:not(.is-collapsed) {
-        padding: 0px 0px 10px 0px;
+        padding: 0px 0px var(--callout-title-padding) 0px;
         .callout-title {
           background-color: rgba(var(--callout-color), 0.1);
-          padding: 10px 0px 10px 10px;
+          padding: var(--callout-title-padding);
           border-color: rgba(var(--callout-color), 0.4);
           cursor: pointer;
         }
         .callout-content {
-          padding: 10px 10px 0 15px;
+          padding: var(--callout-title-padding) var(--callout-title-padding) 0 calc(var(--callout-title-padding)*1.5);
           border-top: 1px dashed rgba(var(--callout-color), 0.4);
         }
       }
@@ -63,7 +76,7 @@
       padding: 0px;
       .callout-title {
         background-color: rgba(var(--callout-color), 0.1);
-        padding: 10px 0px 10px 10px;
+        padding: var(--callout-title-padding) 0px var(--callout-title-padding) var(--callout-title-padding);
         border-color: rgba(var(--callout-color), 0.4);
       }
     }
@@ -98,9 +111,15 @@
     }
   }
 }
+.callout {
+  --bold-color: currentColor;
+  --italic-color: currentColor;
+}
 .theme-light.anp-callout-toggle .callout-title-inner,
 .theme-light.anp-callout-toggle.anp-callout-normal-toggle .callout:not(.is-collapsible) .callout-title-inner {
   color: var(--text-normal);
+  --bold-color: var(--text-normal);
+  --italic-color: var(--text-normal);
 }
 .anp-callout-toggle .callout-content > {
   p, ul, ol {
