--- a/src/modules/Features/metadata-button.scss
+++ b/src/modules/Features/metadata-button.scss
@@ -4,6 +4,7 @@
     padding: 0;
     .frontmatter-container-header {
       width: 32px !important;
+      z-index: 1;
       height: 32px !important;
       text-overflow: clip;
       overflow: hidden;
