--- a/src/modules/Base/layouts.scss
+++ b/src/modules/Base/layouts.scss
@@ -1,12 +1,12 @@
 body.anp-card-layout,
 .anp-card-layout .sidebar-toggle-button,
 .anp-card-layout .workspace-tabs.mod-top {
-    --tab-container-background: var(--titlebar-background) !important;
+    --tab-container-background: rgb(var(--ctp-crust)) !important;
 }
 body.is-focused.anp-card-layout,
 body.is-focused.anp-card-layout .sidebar-toggle-button,
 body.is-focused.anp-card-layout .workspace-tabs.mod-top {
-    --tab-container-background: var(--titlebar-background) !important;
+    --tab-container-background: rgb(var(--ctp-crust)) !important;
 }
 .anp-card-layout .mod-left-split .workspace-tab-header-container {
     border-bottom: none;
@@ -34,15 +34,19 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
 }
 .anp-card-layout .side-dock-actions {
     padding: var(--ribbon-padding);
+}
+.anp-card-layout-actions.anp-card-layout .side-dock-actions {
     border-radius: 0px var(--radius-xl) var(--radius-xl) 0px;
+    border: 1px solid var(--tab-outline-color);
+    background-color: var(--background-primary);
+}
+.anp-card-layout-actions.anp-card-layout .side-dock-settings {
+    border-radius: 0px var(--radius-xl) 0px 0px;
     border: 1px solid var(--tab-outline-color);
     background-color: var(--background-primary);
 }
 .anp-card-layout .side-dock-settings {
     padding: var(--ribbon-padding);
-    border-radius: 0px var(--radius-xl) 0px 0px;
-    border: 1px solid var(--tab-outline-color);
-    background-color: var(--background-primary);
 }
 .anp-card-layout .workspace-ribbon.mod-left {
     margin-top: calc(var(--header-height) - 1px) !important;
@@ -88,6 +92,19 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
     border: 1px solid var(--tab-outline-color);
     margin-bottom: 10px;
 }
+.anp-card-layout.anp-card-shadows .workspace-split .workspace-leaf-content {
+    box-shadow: 0 4px 3px 2px rgba(0,0,0,0.06);
+}
+.anp-card-layout.anp-card-shadows .workspace-split .workspace-leaf-content[data-type="file-explorer"] {
+    background-color: var(--tab-container-background);
+    box-shadow: none;
+    border-width: 0px;
+}
+.anp-card-layout.anp-card-layout-filebrowser.anp-card-shadows .workspace-split  .workspace-leaf-content[data-type="file-explorer"] {
+    background-color: var(--background-primary);
+    box-shadow: 0 4px 3px 2px rgba(0,0,0,0.06);
+    border-width: 1px;
+}
 .anp-card-layout .workspace-split .mod-stacked .workspace-leaf-content {
     border-radius: 0;
     border: none;
@@ -117,4 +134,7 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
 }
 .anp-card-layout .mod-top .workspace-leaf-resize-handle {
     border-color: transparent;
+}
+.anp-disable-borders {
+    --divider-color: transparent;
 }
