--- a/theme.css
+++ b/theme.css
@@ -350,6 +350,32 @@ settings:
                 label: Cards
                 value: anp-card-layout
     - 
+        id: anp-disable-borders
+        title: Disable borders
+        type: class-toggle
+    - 
+        id: anp-layout-card
+        title: Card layout settings
+        type: heading
+        level: 3
+        collapsed: true
+    - 
+        id: anp-card-shadows
+        title: Enable shadows
+        type: class-toggle
+    - 
+        id: anp-card-layout-actions
+        title: Enable card format for actions
+        type: class-toggle
+    - 
+        id: anp-card-layout-filebrowser
+        title: Enable card format for file browser
+        type: class-toggle
+    - 
+        id: anp-card-layout-right
+        title: Enable card format for right elements
+        type: class-toggle
+    - 
         id: anp-list-header
         title: Lists
         type: heading
@@ -1262,16 +1288,20 @@ body {
   background-color: var(--background-modifier-active-hover);
 }
 
+.mod-left-split .workspace-tab-header.has-active-menu:hover, .mod-right-split .workspace-tab-header.has-active-menu:hover, .mod-left-split .workspace-tab-header.is-active:hover, .mod-right-split .workspace-tab-header.is-active:hover {
+  background-color: var(--background-modifier-active-hover);
+}
+
 body.anp-card-layout,
 .anp-card-layout .sidebar-toggle-button,
 .anp-card-layout .workspace-tabs.mod-top {
-  --tab-container-background: var(--titlebar-background) !important;
+  --tab-container-background: rgb(var(--ctp-crust)) !important;
 }
 
 body.is-focused.anp-card-layout,
 body.is-focused.anp-card-layout .sidebar-toggle-button,
 body.is-focused.anp-card-layout .workspace-tabs.mod-top {
-  --tab-container-background: var(--titlebar-background) !important;
+  --tab-container-background: rgb(var(--ctp-crust)) !important;
 }
 
 .anp-card-layout .mod-left-split .workspace-tab-header-container {
@@ -1305,16 +1335,22 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
 
 .anp-card-layout .side-dock-actions {
   padding: var(--ribbon-padding);
+}
+
+.anp-card-layout-actions.anp-card-layout .side-dock-actions {
   border-radius: 0px var(--radius-xl) var(--radius-xl) 0px;
+  border: 1px solid var(--tab-outline-color);
+  background-color: var(--background-primary);
+}
+
+.anp-card-layout-actions.anp-card-layout .side-dock-settings {
+  border-radius: 0px var(--radius-xl) 0px 0px;
   border: 1px solid var(--tab-outline-color);
   background-color: var(--background-primary);
 }
 
 .anp-card-layout .side-dock-settings {
   padding: var(--ribbon-padding);
-  border-radius: 0px var(--radius-xl) 0px 0px;
-  border: 1px solid var(--tab-outline-color);
-  background-color: var(--background-primary);
 }
 
 .anp-card-layout .workspace-ribbon.mod-left {
@@ -1369,6 +1405,22 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
   margin-bottom: 10px;
 }
 
+.anp-card-layout.anp-card-shadows .workspace-split .workspace-leaf-content {
+  box-shadow: 0 4px 3px 2px rgba(0, 0, 0, 0.06);
+}
+
+.anp-card-layout.anp-card-shadows .workspace-split .workspace-leaf-content[data-type=file-explorer] {
+  background-color: var(--tab-container-background);
+  box-shadow: none;
+  border-width: 0px;
+}
+
+.anp-card-layout.anp-card-layout-filebrowser.anp-card-shadows .workspace-split .workspace-leaf-content[data-type=file-explorer] {
+  background-color: var(--background-primary);
+  box-shadow: 0 4px 3px 2px rgba(0, 0, 0, 0.06);
+  border-width: 1px;
+}
+
 .anp-card-layout .workspace-split .mod-stacked .workspace-leaf-content {
   border-radius: 0;
   border: none;
@@ -1403,6 +1455,10 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
 
 .anp-card-layout .mod-top .workspace-leaf-resize-handle {
   border-color: transparent;
+}
+
+.anp-disable-borders {
+  --divider-color: transparent;
 }
 
 .mod-community-theme summary h1:first-child, .mod-community-theme summary h2:first-child, .mod-community-theme summary h3:first-child, .mod-community-theme summary h4:first-child, .mod-community-theme summary h5:first-child, .mod-community-theme summary h6:first-child {
