--- a/theme.css
+++ b/theme.css
@@ -372,10 +372,6 @@ settings:
         title: Enable card format for file browser
         type: class-toggle
     - 
-        id: anp-card-layout-right
-        title: Enable card format for right elements
-        type: class-toggle
-    - 
         id: anp-list-header
         title: Lists
         type: heading
@@ -1290,6 +1286,10 @@ body {
 
 .mod-left-split .workspace-tab-header.has-active-menu:hover, .mod-right-split .workspace-tab-header.has-active-menu:hover, .mod-left-split .workspace-tab-header.is-active:hover, .mod-right-split .workspace-tab-header.is-active:hover {
   background-color: var(--background-modifier-active-hover);
+}
+
+.is-focused .mod-active .workspace-tab-header.is-active .workspace-tab-header-inner-icon, .is-focused .mod-active .workspace-tab-header.is-active .workspace-tab-header-inner-title {
+  color: var(--color-accent);
 }
 
 body.anp-card-layout,
