--- a/src/modules/Tabs/minimalistic-tabs.scss
+++ b/src/modules/Tabs/minimalistic-tabs.scss
@@ -14,6 +14,7 @@
           .workspace-tab-header-inner {
             border-radius: var(--tab-radius) var(--tab-radius) 0px 0px;
             margin-top: 0.5px;
+            padding-bottom: 4px;
           }
         }
         ::after {
